--- a/KuduDummy/Views/Home/Index.cshtml
+++ b/KuduDummy/Views/Home/Index.cshtml
@@ -6,6 +6,9 @@
 <div class="row">
     <div class="col-md-4">
         <h2>Getting started</h2>
+        <p>
+            Love Kudu!!!
+        </p>
         <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
         a broad range of clients, including browsers and mobile devices. ASP.NET Web API
         is an ideal platform for building RESTful applications on the .NET Framework.</p>
